--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "weather-server",
+  "version": "1.0.0",
+  "description": "Node.js application for retrieving weather conditions",
+  "main": "weather.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "jest"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "express": "^4.19.2"
-  }
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
